# aws-nitro-enclaves-sdk-c

./: CMakeLists.txt  README.md  build_hello_demo.sh
containers/: Dockerfile.demo
hello_attestation/: Dockerfile  extract_attestation.py  hello_attestation.py  run.sh
include/aws/nitro_enclaves/: attestation.h
pybind/: CMakeLists.txt  cpp_wrapper.cpp  cpp_wrapper.h  function_wrapper.cpp  setup.py
source/: attestation.c
